feat: Strings-based projects support  (#119)